--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="col-lg-6 order-lg-2 order-1 text-center">
                 <div class="hero-image">
-                    <img src="{{ url_for('static', filename='img/profile1.png') }}" alt="Shubhankar Patel" class="profile-img rounded-bottom-circle">
+                    <img src="{{ url_for('static', filename='img/profile1.png') }}" alt="Shubhankar Patel" class="profile-img">
                 </div>
             </div>
         </div>
