--- a/templates/index.html
+++ b/templates/index.html
@@ -144,7 +144,7 @@
                         <a href="#" class="btn btn-outline-gold btn-sm">
                             <i class="fab fa-github me-1"></i>GitHub
                         </a>
-                        <a href="#" class="btn btn-gold btn-sm ms-2">
+                        <a href="https://ai-financial-tracker.onrender.com" class="btn btn-gold btn-sm ms-2">
                             <i class="fas fa-external-link-alt me-1"></i>Demo
                         </a>
                     </div>
