--- a/templates/index.html
+++ b/templates/index.html
@@ -141,7 +141,7 @@
                     </div>
                     <p class="project-description">Intelligent budget planning application that uses machine learning to predict expenses and provide personalized financial recommendations.</p>
                     <div class="project-links">
-                        <a href="#" class="btn btn-outline-gold btn-sm">
+                        <a href="https://github.com/Shubhankar45/Shubh/edit/main/" class="btn btn-outline-gold btn-sm">
                             <i class="fab fa-github me-1"></i>GitHub
                         </a>
                         <a href="https://ai-financial-tracker.onrender.com" class="btn btn-gold btn-sm ms-2">
